--- a/package.json
+++ b/package.json
@@ -40,5 +40,13 @@
     ]
   },
   "proxy": "http://localhost:4000",
-  "main": "./server/index.js"
+  "main": "./server/index.js",
+  "devDependencies": {
+    "@testing-library/react": "^10.0.1"
+  },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "<rootDir>/src/_tests_/_data_"
+    ]
+  }
 }
